2024-01-20T01:07:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7591065084 # 39
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 195 225 / 197 227
* notice: next accum: outdated-unq outdated-all / unq all: 195 225 / 198 228
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-19]

2024-01-13T08:17:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7511295604 # 19
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-13
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 195 225 / 196 226
* notice: next accum: outdated-unq outdated-all / unq all: 195 225 / 197 227
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-13]

2024-01-11T16:19:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7491552957 # 14
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 194 223 / 195 225
* notice: next accum: outdated-unq outdated-all / unq all: 195 225 / 196 226
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-12-28] / [2024-01-11]

2024-01-07T08:18:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7437028556 # 1