@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-20T01:07:25Z",
-  "count_outdated" : 225,
-  "uniques_outdated" : 195,
+  "timestamp" : "2024-01-25T16:20:15Z",
+  "count_outdated" : 226,
+  "uniques_outdated" : 196,
   "count" : 228,
   "uniques" : 198,
   "clones" : [
-    {
-      "timestamp": "2024-01-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-13T00:00:00Z",
       "count": 1,
